@@ -1,3 +1,8 @@
+2009-09-12 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Improve spelling suggestion by sorting them
+	  according to information from morphological analysis.
+
 2009-09-11 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add directory for Finnish design documentation.
